--- a/app/src/main/res/layout/adapter_goodslist.xml
+++ b/app/src/main/res/layout/adapter_goodslist.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="goodslist"
-            type="com.lzyyd.hsq.bean.GoodsListBean" />
+            type="com.lzyyd.hsq.bean.HomeItemBean" />
 
         <variable
             name="resImgId"
