--- a/app/src/main/res/layout/activity_vip.xml
+++ b/app/src/main/res/layout/activity_vip.xml
@@ -7,6 +7,8 @@
         <variable
             name="vip"
             type="com.lzyyd.hsq.viewmodel.VipViewModel" />
+
+        <import type="android.view.View"/>
         
     </data>
     
@@ -159,6 +161,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/margin_20"
+                    android:visibility="@{vip.projectField == 1 ? View.VISIBLE : View.GONE}"
                     >
 
                     <ImageView
@@ -179,7 +182,6 @@
                         android:textSize="14sp"
                         android:layout_marginLeft="@dimen/margin_20"
                         android:layout_centerVertical="true"
-                        android:alpha="0.5"
                         />
 
 
@@ -208,6 +210,7 @@
                         android:text="去升级"
                         android:textColor="#ffffffff"
                         android:textSize="14sp"
+                        android:clickable="@{vip.userLevelField > 0}"
                         android:layout_alignParentRight="true"
                         android:layout_marginRight="@dimen/margin_20"
                         android:layout_centerVertical="true"
