--- a/app/src/main/res/layout/adapter_item_home.xml
+++ b/app/src/main/res/layout/adapter_item_home.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+
+        <variable
+            name="griditem"
+            type="com.lzyyd.hsq.bean.HomeGridItemBean" />
 
     </data>
 
@@ -14,11 +19,12 @@
     android:layout_marginBottom="5dp">
 
 
-    <ImageView
+    <com.lzyyd.hsq.ui.RoundImageView
         android:id="@+id/iv_home_grid"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:scaleType="fitXY"
+        app:image="@{griditem.img}"
         />
 
     <TextView
@@ -26,17 +32,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="12sp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="@dimen/margin_5"
+        android:layout_marginBottom="@dimen/margin_5"
         android:textColor="#333333"
-        />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="加油充电8折"
-        android:textColor="#ff999999"
-        android:layout_marginTop="6dp"
-        android:textSize="10sp"
+        android:text="@{griditem.name}"
         />
 
 </LinearLayout>
