--- a/app/src/main/res/layout/activity_personal_info.xml
+++ b/app/src/main/res/layout/activity_personal_info.xml
@@ -154,14 +154,68 @@
 
     </LinearLayout>
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginTop="@dimen/margin_10"
+        android:background="@drawable/bg_sure_order_address"
         android:layout_marginLeft="@dimen/margin_10"
         android:layout_marginRight="@dimen/margin_10"
-        android:layout_marginTop="@dimen/margin_10"
-        android:orientation="vertical"
-        android:background="@drawable/bg_sure_order_address">
+        >
+
+        <RelativeLayout
+            android:id="@+id/rl_me_address"
+            android:layout_width="match_parent"
+            android:paddingLeft="@dimen/padding_15"
+            android:paddingRight="@dimen/padding_15"
+            android:layout_height="44dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/textsize14"
+                android:textColor="@color/grey_333333"
+                android:layout_centerVertical="true"
+                android:text="@string/me_address"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/tv_more"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:typeface="@{personalViewModel.setTypeFace()}"
+                />
+
+        </RelativeLayout>
+
+
+    <RelativeLayout
+        android:id="@+id/rl_bind_card"
+        android:layout_width="match_parent"
+        android:paddingLeft="@dimen/padding_15"
+        android:paddingRight="@dimen/padding_15"
+        android:layout_height="44dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/textsize14"
+            android:textColor="@color/grey_333333"
+            android:layout_centerVertical="true"
+            android:text="@string/me_bind_card"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/tv_more"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:typeface="@{personalViewModel.setTypeFace()}"
+            />
+
+    </RelativeLayout>
+
 
         <RelativeLayout
             android:id="@+id/rl_change_psd"
@@ -311,6 +365,37 @@
 
         </LinearLayout>
     </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/rl_me_customer_service"
+        android:layout_width="match_parent"
+        android:layout_marginLeft="@dimen/margin_10"
+        android:layout_marginRight="@dimen/margin_10"
+        android:layout_marginBottom="@dimen/margin_10"
+        android:background="@drawable/bg_sure_order_address"
+        android:paddingLeft="@dimen/padding_15"
+        android:paddingRight="@dimen/padding_15"
+        android:layout_height="44dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/textsize14"
+            android:textColor="@color/grey_333333"
+            android:layout_centerVertical="true"
+            android:text="@string/me_customer_service"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/tv_more"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:typeface="@{personalViewModel.setTypeFace()}"
+            />
+
+    </RelativeLayout>
+
+
 
     <TextView
         android:id="@+id/tv_loginout"
