--- a/app/src/main/res/layout/me_changchangqing_layout.xml
+++ b/app/src/main/res/layout/me_changchangqing_layout.xml
@@ -1,7 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <data>
+
+        <variable
+            name="me"
+            type="com.lzyyd.hsq.viewmodel.MeViewModel" />
+
+    </data>
+
+<LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@drawable/bg_sure_order_address"
     android:orientation="vertical">
 
+    <RelativeLayout
+        android:id="@+id/rl_my_address"
+        android:layout_width="match_parent"
+        android:paddingLeft="@dimen/padding_15"
+        android:paddingRight="@dimen/padding_15"
+        android:layout_marginTop="@dimen/margin_10"
+        android:layout_marginLeft="@dimen/margin_10"
+        android:layout_marginRight="@dimen/margin_10"
+        android:layout_height="44dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/textsize14"
+            android:textColor="@color/grey_333333"
+            android:layout_centerVertical="true"
+            android:text="常常清"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/tv_more"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:typeface="@{me.setTypeFace()}"
+            />
+
+    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_changchangqing_btn"
+        android:orientation="horizontal"
+        >
+
+
+
+
+
+
+    </LinearLayout>
+
+
 </LinearLayout>
+</layout>
